force-app/main/default/objects/Candidate__c/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <description>The name of the company where the candidate is currently employed.</description>
    <inlineHelpText>Enter the candidate&apos;s current employer name.</inlineHelpText>
    <label>Current Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>