force-app/main/default/objects/Candidate__c/fields/Current_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_Title__c</fullName>
    <description>The candidate&apos;s current job title or position.</description>
    <inlineHelpText>Enter the candidate&apos;s current job title (e.g., Senior Software Engineer, Marketing Manager).</inlineHelpText>
    <label>Current Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>