force-app/main/default/objects/Candidate__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The candidate&apos;s primary email address for communication.</description>
    <inlineHelpText>Enter a valid email address. This field must be unique across all candidates.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>