force-app/main/default/objects/Candidate__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The candidate&apos;s first name or given name.</description>
    <inlineHelpText>Enter the candidate&apos;s first name as it appears on their resume.</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>