force-app/main/default/objects/Candidate__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The candidate&apos;s last name or family name.</description>
    <inlineHelpText>Enter the candidate&apos;s last name as it appears on their resume.</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>