force-app/main/default/objects/Candidate__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>The candidate&apos;s LinkedIn profile URL for professional background verification.</description>
    <inlineHelpText>Enter the full LinkedIn profile URL (e.g., https://www.linkedin.com/in/username).</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>