force-app/main/default/objects/Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The candidate&apos;s primary contact phone number.</description>
    <inlineHelpText>Enter the candidate&apos;s phone number with area code.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>