force-app/main/default/objects/Candidate__c/fields/Resume_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Resume_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the candidate&apos;s resume has been uploaded to the system.</description>
    <inlineHelpText>Check this box once the candidate&apos;s resume has been uploaded as an attachment or file.</inlineHelpText>
    <label>Resume Uploaded</label>
    <type>Checkbox</type>
</CustomField>