force-app/main/default/objects/Candidate__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>A detailed list of the candidate&apos;s professional skills, competencies, and technical expertise.</description>
    <inlineHelpText>Enter the candidate&apos;s key skills, separated by commas (e.g., Java, Python, Project Management, Salesforce).</inlineHelpText>
    <label>Skills</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>