force-app/main/default/objects/Candidate__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>The total number of years of professional work experience the candidate has.</description>
    <inlineHelpText>Enter the candidate&apos;s total years of professional experience as a whole number.</inlineHelpText>
    <label>Years of Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>