force-app/main/default/objects/Candidate__c/listViews/All_Candidates.listView-meta.xml
<ListView>
    <fullName>All_Candidates</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Current_Company__c</columns>
    <columns>Years_of_Experience__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Candidates</label>
</ListView>